--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Get Password - Diptanu Baidya</title>
+  <title>Document</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -19,11 +19,11 @@
         <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="generatePass()">Click to Get Password</button>
         <button type="button" class="btn btn-outline-dark bg-warning btn-lg px-4" onclick="resetAll()">Reset your password</button>
       </div>
-      <div class="col-auto gen my-3">
+      <div class="col-auto gen my-3" style="display: none;">
         <p class="form-control my-3" id="para"></p>
 
       </div>
-      <div class="st my-4">
+      <div class="st my-4" style="display: none;">
         <div class="form-control" id="strength-indicator"></div>
       </div>
     </div>
